completed README.md, updated Postman test suite, and fixed login/signup pages css z-index issue

--- a/react-vite/src/components/LoginFormPage/LoginForm.css
+++ b/react-vite/src/components/LoginFormPage/LoginForm.css
@@ -2,7 +2,7 @@
   height: 1150px;
   background-image: url("../../../public/login-banner.jpg");
   position: relative;
-  z-index: -2;
+  z-index: 0;
 }
 
 #container-login-page::before {
@@ -20,6 +20,7 @@
 #container-login-form {
   margin: 0 auto;
   max-width: 715px;
+  z-index: 1;
 }
 
 #container-login-form h1 {
@@ -74,6 +75,7 @@
   grid-area: right-login;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 3px;
   font-size: 12px;
 }
@@ -92,10 +94,6 @@
 
   #container-login-form-left button {
     width: 100%;
-  }
-
-  #container-login-form-right {
-    align-items: center;
   }
 
   #container-login-form-right img {
